Important classes and interfaces have been added to the project.

--- a/EnterpriseSystem/EnterpriseSystem.csproj
+++ b/EnterpriseSystem/EnterpriseSystem.csproj
@@ -8,4 +8,14 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Entities\" />
+    <Folder Include="Exceptions\" />
+    <Folder Include="Logging\" />
+    <Folder Include="Serialization\Abstract\" />
+    <Folder Include="Serialization\Json\" />
+    <Folder Include="Serialization\Xml\" />
+    <Folder Include="Service\" />
+  </ItemGroup>
+
 </Project>
