JSON serialization/deserialization (application data saving) has been completed. 'SinglyLinkedList<Product> Products' has been replaced by 'List<Product> ProductsList' in Employee.cs and in its successor classes to achieve a correct JSON serialization/deserialization functionality.

--- a/EnterpriseSystem/EnterpriseSystem.csproj
+++ b/EnterpriseSystem/EnterpriseSystem.csproj
@@ -15,7 +15,10 @@
     <Folder Include="Serialization\Abstract\" />
     <Folder Include="Serialization\Json\" />
     <Folder Include="Serialization\Xml\" />
-    <Folder Include="Service\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
 </Project>
