Config.cs has been edited (added a new static readonly property). Added a new .txt file with the information about the application.

--- a/EnterpriseSystem/App.config
+++ b/EnterpriseSystem/App.config
@@ -2,6 +2,7 @@
 <configuration>
 	<appSettings>
 		<add key="FileName" value="loginfo.txt"/>
+		<add key="AboutInfo" value="about.txt"/>
 		<add key="EmployeeNotFoundException" value="Employee not found"/>
 		<add key="ProductNotFoundException" value="Product not found"/>
 	</appSettings>
